Navigation/sidebar.scss
@import '../settings';
@import '../helpers';

.mrc-sidebar {

  position: fixed;
  top: 80px;
  height: calc(100vh - 80px);

  -ms-grid-row: 2;
  -ms-grid-column: 1;
  grid-area: navigation;

  z-index: $z-index-nav;

  .mrc-language {
    margin: 2em 0;
    &:hover, &:focus {
      background-color: transparent;
    }
  }
}

.back-action {
  position:sticky;
}
.mrc-language select {
  text-transform: capitalize;
}

